; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_hptiop.c_hptiop_request_callback_itl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_hptiop.c_hptiop_request_callback_itl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hptiop_hba = type { i32 }

@IOPMU_QUEUE_ADDR_HOST_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hptiop_hba*, i32)* @hptiop_request_callback_itl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hptiop_request_callback_itl(%struct.hptiop_hba* %0, i32 %1) #0 {
  %3 = alloca %struct.hptiop_hba*, align 8
  %4 = alloca i32, align 4
  store %struct.hptiop_hba* %0, %struct.hptiop_hba** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @IOPMU_QUEUE_ADDR_HOST_BIT, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load %struct.hptiop_hba*, %struct.hptiop_hba** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @IOPMU_QUEUE_ADDR_HOST_BIT, align 4
  %13 = xor i32 %12, -1
  %14 = and i32 %11, %13
  %15 = call i32 @hptiop_host_request_callback_itl(%struct.hptiop_hba* %10, i32 %14)
  br label %20

16:                                               ; preds = %2
  %17 = load %struct.hptiop_hba*, %struct.hptiop_hba** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @hptiop_iop_request_callback_itl(%struct.hptiop_hba* %17, i32 %18)
  br label %20

20:                                               ; preds = %16, %9
  ret void
}

declare dso_local i32 @hptiop_host_request_callback_itl(%struct.hptiop_hba*, i32) #1

declare dso_local i32 @hptiop_iop_request_callback_itl(%struct.hptiop_hba*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
